Invite page: Fix CSS to remove extra spacing between photos

--- a/frontend/static/invite/css/style.css
+++ b/frontend/static/invite/css/style.css
@@ -155,7 +155,6 @@
 				position: relative;
 				display: block;
 				height: 175px;
-				width: 256px;
 				overflow: hidden;
 				border-right: solid 8px #fff;
 			}
